--- a/manifest.json
+++ b/manifest.json
@@ -3,6 +3,6 @@
   "name": "Compteur Gazpar",
   "documentation": "",
   "dependencies": [],
-  "codeowners": ["MAUGIN Thomas"],
+  "codeowners": ["Thom-x"],
   "requirements": ["numpy==1.19.2", "python-dateutil==2.8.1", "requests==2.24.0", "lxml==4.5.2"]
 }
