--- a/custom_components/gazpar_integration/manifest.json
+++ b/custom_components/gazpar_integration/manifest.json
@@ -1,7 +1,8 @@
 {
   "domain": "gazpar",
   "name": "Compteur Gazpar",
-  "documentation": "",
+  "documentation": "https://github.com/Thom-x/HomeAssistant_Gazpar",
+  "issue_tracker": "https://github.com/Thom-x/HomeAssistant_Gazpar/issues",
   "dependencies": [],
   "codeowners": ["Thom-x"],
   "requirements": ["numpy==1.19.2", "python-dateutil==2.8.1", "requests==2.24.0", "lxml==4.5.2"]
