--- a/custom_components/gazpar/manifest.json
+++ b/custom_components/gazpar/manifest.json
@@ -6,5 +6,6 @@
   "dependencies": [],
   "version": "1.0.0",
   "codeowners": ["@Thom-x"],
-  "requirements": ["numpy==1.19.2", "python-dateutil==2.8.1", "requests==2.24.0", "lxml==4.5.2"]
+  "requirements": ["numpy==1.19.2", "python-dateutil==2.8.1", "requests==2.24.0", "lxml==4.5.2"]3
+  "iot_class": "cloud_polling"
 }
